@startuml

title __DAP-PRACTICA07's Class Diagram__\n

  namespace practica07 {
    class practica07.DataFetcher {
    }
  }
  

  namespace practica07 {
    class practica07.GUI {
    }
  }
  

  namespace practica07 {
    class practica07.Observer {
    }
  }
  

  namespace practica07 {
    class practica07.Player {
    }
  }
  

  namespace practica07 {
    abstract class practica07.Ranking {
    }
  }
  

  namespace practica07 {
    class practica07.ScorersRaking {
    }
  }
  

  namespace practica07 {
    class practica07.Test {
    }
  }
  

  practica07.GUI o-- practica07.Observer : observer
  practica07.Observer o-- practica07.GUI : gui
  practica07.Observer o-- practica07.Ranking : ranking
  practica07.ScorersRaking -up-|> practica07.Ranking


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
